loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:5: error: forward reference extends over definition of variable nbBaggle
        nbBaggle += 1
        ^